# FusionFutures

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .prettierrc.json  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reqs.txt  tsconfig.json
.github/workflows/: ci.yml
apps/web/: .env.example  .eslintrc.cjs  eslint.config.mjs  next-env.d.ts  next.config.mjs  package.json  postcss.config.cjs  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/__tests__/: module-grid.test.tsx
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(modules)/admin/: page.tsx
apps/web/app/(modules)/dashboard/: page.tsx
apps/web/app/api/auth/[...nextauth]/: route.ts
apps/web/app/debugging/: page.tsx
apps/web/app/signin/: page.tsx
apps/web/components/: admin-task-list.tsx  demo-data-panel.tsx  providers.tsx  query-provider.tsx
apps/web/lib/: use-debug-logging.ts
apps/web/src/app/: layout.tsx  page.tsx  providers.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/admin/: page.tsx
apps/web/src/app/(app)/events/: page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/invite/[code]/: page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/employers/: page.tsx
apps/web/src/app/events/: page.tsx
apps/web/src/components/: admin-invitation-panel.tsx  admin-organisation-queue.tsx  admin-user-table.tsx  auth-guard.tsx  event-create-form.tsx  event-management-panel.tsx  events-gallery.tsx  impact-feed.tsx  insight-grid.tsx  navigation-chrome.tsx  organisation-showcase.tsx  page-header.tsx  post-create-form.tsx  profile-menu.tsx  role-badge.tsx  user-role-selector.tsx
apps/web/src/components/auth/: invite-signup-panel.tsx  login-panel.tsx
apps/web/src/data/: accounts.ts  events.ts  insights.ts  invitations.ts  organisations.ts  posts.ts  users.ts
apps/web/src/hooks/: use-events.tsx  use-impact-feed.tsx  use-platform-user.tsx
apps/web/src/lib/: logger.ts  runtime-config.ts  security.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: platform.ts
infra/docker/: docker-compose.yml
infra/docker/config/: Caddyfile
infra/docker/scripts/: run-backup.sh
infra/docker/services/: api.Dockerfile  backup.Dockerfile  web.Dockerfile
scripts/: bootstrap-fusion-futures-web.ps1  bootstrap-web.sh  command_helpers.py  deploy.sh  fusionfutures_setup.py  generate-types.mjs  launch_fusionfutures_local.py  run-next-web.mjs
services/api/: pyproject.toml
services/api/src/fusion_futures_api/: __init__.py  __main__.py  service_entrypoint.py
services/api/src/fusion_futures_api/cli/: seed.py
services/api/src/fusion_futures_api/core/: auth.py  csrf.py  database.py  logging.py  middleware.py  settings.py
services/api/src/fusion_futures_api/events/: bus.py
services/api/src/fusion_futures_api/modules/: __init__.py
services/api/src/fusion_futures_api/modules/demo/: __init__.py  routes.py
services/api/src/fusion_futures_api/modules/users/: __init__.py  routes.py
services/api/src/fusion_futures_api/tests/: __init__.py
services/api/tests/: test_demo_crud.py  test_health.py
services/api/tools/: __init__.py  new_module.py
