# ============================================================================
# File: services/api/pyproject.toml
# Purpose: Define FastAPI service build configuration using Hatchling.
# Structure: Specifies project metadata, dependencies, and tool configs (Ruff/Black).
# Usage: Install via `pip install -e services/api` to develop locally.
# ============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusion_futures_api"
version = "0.1.0"
description = "Modular FastAPI service with plugin routers and event bus"
# Pin below 3.13 because pydantic-core wheels are not yet published for 3.13 on Windows.
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "sqlmodel==0.0.16",
  "psycopg[binary]==3.1.18",
  "python-multipart==0.0.9",
  "itsdangerous==2.2.0",
  "pydantic[email]==2.7.1",
  "slowapi==0.1.9",
  "httpx==0.27.0",
  "redis==5.0.4",
  "python-json-logger==2.0.7",
  "rich==13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.1",
  "pytest-asyncio==0.23.6",
  "pytest-cov==5.0.0",
  "ruff==0.4.4",
  "black==24.4.2",
  "mypy==1.10.0"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP", "N", "S", "ASYNC", "Q"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra -q --disable-warnings"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/fusion_futures_api"]
