# ============================================================================
# File: services/api/pyproject.toml
# Purpose: Define FastAPI service build configuration using Hatchling.
# Structure: Specifies project metadata, dependencies, and tool configs (Ruff/Black).
# Usage: Install via `pip install -e services/api` to develop locally.
# ============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusion_futures_api"
version = "0.1.0"
description = "Modular FastAPI service with plugin routers and event bus"
# Support modern interpreters, including Python 3.13 which now has full
# wheel coverage for our dependency stack (pydantic-core ≥2.18 ships wheels
# for 3.13 on all major platforms). We keep an upper bound at the next minor
# release to allow time for dependency validation.
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.1",
  "sqlmodel==0.0.18",
  "psycopg[binary]==3.2.10",
  "python-multipart==0.0.9",
  "itsdangerous==2.2.0",
  "pydantic[email]==2.8.2",
  "slowapi==0.1.9",
  "httpx==0.27.0",
  "redis==5.0.6",
  "python-json-logger==2.0.7",
  "rich==13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-asyncio==0.23.7",
  "pytest-cov==5.0.0",
  "ruff==0.5.5",
  "black==24.8.0",
  "mypy==1.10.1"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP", "N", "S", "ASYNC", "Q"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra -q --disable-warnings"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/fusion_futures_api"]
